[package]
name = "aoc2018"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utility = { path = "../utility" }
color-eyre = "0.6.2"
ndarray = "0.15.6"
petgraph = "0.6.2"
strum = "0.24.1"
strum_macros = "0.24"
regex = "1.7.0"
itertools = "0.10.5"
chrono = "0.4.23"
