[package]
name = "aoc2019"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utility = { path = "../utility" }
color-eyre = "0.6.2"
itertools = "0.10.5"
num = "0.4.0"
num-derive = "0.3.0"
num-traits = "0.2.10"
num-rational = "0.4.1"
ndarray = "0.15.6"
text_io = "0.1.12"

[features]
